--- a/components/Header/header.scss
+++ b/components/Header/header.scss
@@ -1,9 +1,48 @@
+@import "@/app/variables.module";
 header {
   padding: 1em ;
   .main-header {
     display: flex;
     justify-content: space-evenly;
+    align-items: center;
 
+    .contact-to-clinic {
+      .location {
+        p {
+          text-align: center;
+        }
+      }
+    }
+
+    .contact {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+      .phones {
+        padding-right: 2em;
+
+        .phones-link {
+          padding-bottom: .5em;
+        }
+      }
+    }
+    button {
+      cursor: pointer;
+      background-color: $black;
+      color: $silver;
+      padding: .5em 1.5em;
+      border-radius: 50px;
+      border: 0;
+      letter-spacing: .05em;
+      transition: .3s ease-in-out;
+
+      &:hover {
+        background-color: $silver;
+        color: $black;
+        transition: .3s ease-in-out;
+      }
+    }
   }
   nav {
     padding-top: 1.5em;
@@ -13,10 +52,37 @@ header {
 
       li {
         padding-right: 1.5em;
+        overflow: hidden;
+        transition: .3s ease-in-out;
+        
+        a {
+          text-transform: capitalize;
+          position: relative;
 
+
+          &:after {
+            content: "";
+            display: block;
+            position: absolute;
+            left: -100%;
+            bottom: 0;
+            height: 1px;
+            width: 100%;
+            background-color: $darkSilver;
+            transition: .3s ease-in-out;
+          }
+
+          &:hover {
+            &:after{
+              left: 0;
+              transition: .3s ease-in-out;
+            }
+          }
+        }
+        
         &:last-child {
           padding-right: 0;
-      }
+        }
       }
     }
   }
