--- a/components/form.scss
+++ b/components/form.scss
@@ -1,4 +1,16 @@
+@import "../app/variables.module";
+
 .appointment-form {
   position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  margin: auto;
 
+  max-width: 500px;
+  height: 50vh;
+  z-index: 1000;
+  background-color: $darkGray;
+  overflow: auto;
 }
