--- a/components/form.scss
+++ b/components/form.scss
@@ -9,7 +9,9 @@
   margin: auto;
 
   max-width: 400px;
-  height: 50vh;
+  min-height: auto;
+  max-height: 520px;
+
   z-index: 1000;
   background-color: $silver;
   overflow: auto;
@@ -19,11 +21,66 @@
   
   .form-title {
     text-align: center;
+    margin-bottom: 1em;
   }
   form {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-flow: column;
+
+    .inputfield {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      width: 100%;
+      margin-bottom: .7em;
+
+      input, select {
+        padding: 5px 4px;
+        max-width: 45%;
+        width: 100%;
+      }
+
+      label {
+        flex-grow: 2;
+        max-width: 45%;
+      }
+      select {
+        flex-grow: 1;
+      }
+      textarea {
+        padding: 5px;
+        resize: none;
+      }
+    }
+    button {
+      width: 100%;
+      display: block;
+      text-transform: uppercase;
+      letter-spacing: .08em;
+      padding: 5px;
+    }
+  }
+}
+
+select {
+  cursor: pointer;
+  text-transform: capitalize;
+  option {
+    text-transform: capitalize;
+  }
+}
+
+.column {
+  flex-flow: column;
+  align-items: center;
+  width: 100%;
+
+  label, textarea{
+    width: 100%;
+  }
+  label {
+    margin-bottom: .7em;
   }
 }
